Created entities, added dependencies and added persistence settings.

--- a/DeliveryService/pom.xml
+++ b/DeliveryService/pom.xml
@@ -21,5 +21,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>4.1.4.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.derby</groupId>
+        <artifactId>derbyclient</artifactId>
+        <version>10.7.1.1</version>
+    </dependency>
   </dependencies>
 </project>
