--- a/DeliveryService/pom.xml
+++ b/DeliveryService/pom.xml
@@ -31,5 +31,10 @@
         <artifactId>derbyclient</artifactId>
         <version>10.7.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.10.1.1</version>
+    </dependency>
   </dependencies>
 </project>
