--- a/DeliveryService/pom.xml
+++ b/DeliveryService/pom.xml
@@ -90,7 +90,18 @@
             <artifactId>spring-jdbc</artifactId>
             <version>3.2.4.RELEASE</version>
         </dependency>
-         
-            
+
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlbeans</groupId>
+            <artifactId>xmlbeans</artifactId>
+            <version>2.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        
     </dependencies>
 </project>
