--- a/DeliverySystemWeb/pom.xml
+++ b/DeliverySystemWeb/pom.xml
@@ -21,6 +21,17 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- stripes -->
+        <dependency>
+            <groupId>net.sourceforge.stripes</groupId>
+            <artifactId>stripes</artifactId>
+            <version>1.5.7</version>
+        </dependency>
+        <dependency>
+            <groupId>servlets.com</groupId>
+            <artifactId>cos</artifactId>
+            <version>05Nov2002</version>
+        </dependency>
     </dependencies>
 
     <build>
