--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <packaging>pom</packaging>
   <name>DeliverySystem</name>
     <modules>
-        <module>../DeliveryService</module>
-        <module>../DeliverySystemWeb</module>
+        <module>DeliveryService</module>
+        <module>DeliverySystemWeb</module>
     </modules>
 </project>
