--- a/DeliverySystemWeb/src/main/webapp/WEB-INF/web.xml
+++ b/DeliverySystemWeb/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,13 @@
         <param-value>/WEB-INF/spring-context.xml</param-value>
     </context-param>
    
+   <!-- JSTL -->
+    <context-param>
+        <description>JSTL tags will use localized string from the same source as Stripes</description>
+        <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+        <param-value>StripesResources</param-value>
+    </context-param>
+   
     <!-- Stripes -->
     <filter>
         <description>Stripes main conf</description>
@@ -25,7 +32,7 @@
         <init-param>
             <description>locales and encodings in the app</description>
             <param-name>LocalePicker.Locales</param-name>
-            <param-value>cs:utf-8,en:utf-8</param-value>
+            <param-value>sk:utf-8,en:utf-8</param-value>
         </init-param>
         <init-param>
             <description>Stripes injects Spring beans</description>
