Improved layout, added Courier validation, delete method

--- a/DeliverySystemWeb/src/main/resources/StripesResources.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources.properties
@@ -1,6 +1,6 @@
 
 # Resource strings used by the <stripes:errors> tag when there are no nested tags
-stripes.errors.header=<div class="errorbox" style="border: 1px solid red; background-color: yellow; margin: 10px; padding: 10px;">Please fix the following errors:<ul>
+stripes.errors.header=<div class="alert alert-error">Please fix the following errors:<ul>
 stripes.errors.beforeError=<li>
 stripes.errors.afterError=</li>
 stripes.errors.footer=</ul></div>
@@ -55,4 +55,14 @@ validation.maxvalue.valueAboveMaximum=The maximum allowed value for {0} is {2}
 validation.mask.valueDoesNotMatch=<em>{1}</em> is not a valid {0}
 validation.expression.valueFailedExpression=The value supplied ({1}) for field {0} is invalid
 validation.file.postBodyTooBig=Total upload size of {3} KB exceeds the maximum size of {2} KB
+
+buttons.save=Save
+buttons.cancel=Cancel
+buttons.delete=Delete
+
+courierDTO.firstName=First name
+courierDTO.lastName=Last name
+courierDTO.email=Email
+
+courier.createMessage=Create new courier
 
