--- a/DeliverySystemWeb/pom.xml
+++ b/DeliverySystemWeb/pom.xml
@@ -192,6 +192,21 @@
             <version>7.0.42</version>
             <scope>provided</scope>
         </dependency>
+        
+        
+        <!-- JSTL -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        
+        <!-- validation of the email address -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
