Fixed validation box

--- a/DeliverySystemWeb/src/main/resources/StripesResources.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources.properties
@@ -1,6 +1,6 @@
 
 # Resource strings used by the <stripes:errors> tag when there are no nested tags
-stripes.errors.header=<div class="alert alert-error">Please fix the following errors:<ul>
+stripes.errors.header=<div class="alert alert-danger">Please fix the following errors:<ul>
 stripes.errors.beforeError=<li>
 stripes.errors.afterError=</li>
 stripes.errors.footer=</ul></div>
