--- a/DeliverySystemWeb/src/main/resources/StripesResources.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources.properties
@@ -59,6 +59,7 @@ validation.file.postBodyTooBig=Total upload size of {3} KB exceeds the maximum s
 buttons.save=Save
 buttons.cancel=Cancel
 buttons.delete=Delete
+buttons.update=Update
 
 courierDTO.firstName=First name
 courierDTO.lastName=Last name
