--- a/DeliverySystemWeb/pom.xml
+++ b/DeliverySystemWeb/pom.xml
@@ -234,6 +234,10 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <path>/pa165</path>
+                    <port>8080</port>
+                </configuration>
                 <version>2.1</version>
             </plugin>
             <plugin>
