First part of rest client impl

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>DeliveryService</module>
         <module>DeliverySystemWeb</module>
         <module>DeliveryServiceAPI</module>
+        <module>../DeliverySystemRestClient</module>
     </modules>
     
     <build>
