added basic rest server added rest client * without delete functionality some code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,6 @@ pip-log.txt
 /DB/
 /DeliverySystemWeb/target/
 /DeliveryServiceAPI/target/
+/DeliveryServiceRestServer/target/
+/DeliveryServiceWeb/target/
+/DeliveryServiceRestClient/target/
