--- a/DeliveryService/pom.xml
+++ b/DeliveryService/pom.xml
@@ -47,6 +47,16 @@
             <version>4.1.4.Final</version>
         </dependency>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.1.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
             <version>10.7.1.1</version>
@@ -56,8 +66,7 @@
             <artifactId>derby</artifactId>
             <version>10.10.1.1</version>
         </dependency>
-    
-    
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
