--- a/DeliveryServiceWeb/pom.xml
+++ b/DeliveryServiceWeb/pom.xml
@@ -220,7 +220,12 @@
             <artifactId>mail</artifactId>
             <version>1.4</version>
         </dependency>
-
+        <!-- URI builder-->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-bundle-jaxrs</artifactId>
+            <version>2.7.7</version>
+        </dependency>
         <!-- Jersey -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
