Customer client implementation

--- a/DeliveryServiceWeb/pom.xml
+++ b/DeliveryServiceWeb/pom.xml
@@ -176,6 +176,11 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml</groupId>
+            <artifactId>jackson-xml-databind</artifactId>
+            <version>0.6.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
