--- a/DeliveryService/pom.xml
+++ b/DeliveryService/pom.xml
@@ -105,6 +105,14 @@
             <artifactId>spring-jdbc</artifactId>
             <version>3.2.4.RELEASE</version>
         </dependency>
+        
+        <!-- SPRING security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>3.1.3.RELEASE</version>
+            <type>jar</type>
+        </dependency>
 
         <!-- DOZER dependencies BEGIN -->
         <dependency>
