--- a/DeliveryService/pom.xml
+++ b/DeliveryService/pom.xml
@@ -113,6 +113,12 @@
             <version>3.1.3.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>3.1.3.RELEASE</version>
+            <type>jar</type>
+        </dependency>
 
         <!-- DOZER dependencies BEGIN -->
         <dependency>
