--- a/DeliveryServiceWeb/pom.xml
+++ b/DeliveryServiceWeb/pom.xml
@@ -292,6 +292,15 @@
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.4.1</version>
         </dependency>
+        
+        
+        <dependency>
+  <groupId>javax.servlet.jsp</groupId>
+  <artifactId>jsp-api</artifactId>
+  <version>2.1</version>
+  <scope>provided</scope>
+</dependency>
+
     </dependencies>
 
     <build>
