--- a/DeliveryServiceWeb/src/main/webapp/WEB-INF/web.xml
+++ b/DeliveryServiceWeb/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,17 @@
         <param-value>StripesResources</param-value>
     </context-param>
    
+   <!-- Spring Security -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+   
     <!-- Stripes -->
     <filter>
         <description>Stripes main conf</description>
