--- a/DeliveryServiceWeb/pom.xml
+++ b/DeliveryServiceWeb/pom.xml
@@ -97,6 +97,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-struts</artifactId>
             <version>3.2.3.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>antlr</artifactId>
+                    <groupId>antlr</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -155,6 +161,12 @@
             <groupId>org.apache.struts</groupId>
             <artifactId>struts-core</artifactId>
             <version>1.3.10</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>antlr</artifactId>
+                    <groupId>antlr</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.struts</groupId>
@@ -295,11 +307,11 @@
         
         
         <dependency>
-  <groupId>javax.servlet.jsp</groupId>
-  <artifactId>jsp-api</artifactId>
-  <version>2.1</version>
-  <scope>provided</scope>
-</dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
